--- a/templates/dashboard/header.html
+++ b/templates/dashboard/header.html
@@ -17,7 +17,7 @@
 
 <link rel="stylesheet" href="{% static 'assets/plugins/fontawesome/css/all.min.css' %}">
 <link rel="stylesheet" href="{% static 'assets/plugins/fontawesome/css/fontawesome.min.css' %}">
-
+<link rel="stylesheet" href="{% static 'assets/plugins/icons/typicons/typicons.css ' %}">
 <link rel="stylesheet" href="{% static 'assets/css/fullcalendar.min.css' %}">
 
 <link rel="stylesheet" href="{% static 'assets/css/dataTables.bootstrap4.min.css' %}">
