--- a/templates/dashboard/dash.html
+++ b/templates/dashboard/dash.html
@@ -20,14 +20,15 @@
 <div class="page-header">
 <div class="row">
 <div class="col-md-6">
-<h3 class="page-title mb-0">Dashboard</h3>
+	<div class="page-title">
+		<marquee behavior="" direction="left" scrolldelay="250"> <b style="color: red;"> Recently admitted students</b></marquee>
+		
+		</div>
+	<p class=" btn btn-primary">submit Your  assignment here </p>
+	
+
 </div>
-<div class="col-md-6">
-<ul class="breadcrumb mb-0 p-0 float-right">
-<li class="breadcrumb-item"><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
-<li class="breadcrumb-item"><span>Dashboard</span></li>
-</ul>
-</div>
+
 </div>
 </div>
 {% include 'dashboard/mymessage.html' %}
@@ -38,15 +39,21 @@
 <span class="float-left"><img src="{% static 'assets/img/dash/dash-1.png' %}" alt="" width="80"></span>
 <div class="dash-widget-info text-right">
 <span>Student Passode</span>
-<h3>{{passcode}}</h3>
+{% if assigment.passcode  %}
+<h4>{{assigment.passcode}}</h4>
+{% else %}
+<h4>No Passode</h4>
+{% endif %}
+
 </div>
+
 </div>
 </div>
 <div class="col-md-6 col-sm-6 col-lg-6 col-xl-3">
 <div class="dash-widget dash-widget5">
 <div class="dash-widget-info text-left d-inline-block">
-<span>Project Score</span>
-<h3>15 %</h3> 
+<span class="text-success"> TOtal Score</span>
+<h3 class="text-warning">{{myscore }}%</h3> 
 
 </div>
 <span class="float-right"><img src="{% static 'assets/img/dash/dash-2.png' %}" width="80" alt=""></span>
@@ -124,6 +131,8 @@ Student Performance
 
 
 
+{% if admitted %}
+  
 
 
 
@@ -179,221 +188,94 @@ Student Performance
 </div>
 </div>
 </div>
+
 </div>
 </div>
 
 
+{% endif %}
 
 
-<div class="notification-box">
-<div class="msg-sidebar notifications msg-noti">
-<div class="topnav-dropdown-header">
-<span>Messages</span>
-</div>
-<div class="drop-scroll msg-list-scroll">
-<ul class="list-box">
-<li>
-<a href="chat.html">
-<div class="list-item">
-<div class="list-left">
-<span class="avatar">R</span>
-</div>
-<div class="list-body">
-<span class="message-author">Richard Miles </span>
-<span class="message-time">12:28 AM</span>
-<div class="clearfix"></div>
-<span class="message-content">Lorem ipsum dolor sit amet, consectetur adipiscing</span>
-</div>
-</div>
-</a>
-</li>
-<li>
-<a href="chat.html">
-<div class="list-item new-message">
-<div class="list-left">
-<span class="avatar">J</span>
-</div>
-<div class="list-body">
-<span class="message-author">Ruth C. Gault</span>
-<span class="message-time">1 Aug</span>
-<div class="clearfix"></div>
-<span class="message-content">Lorem ipsum dolor sit amet, consectetur adipiscing</span>
-</div>
-</div>
-</a>
-</li>
-<li>
-<a href="chat.html">
-<div class="list-item">
-<div class="list-left">
-<span class="avatar">T</span>
-</div>
-<div class="list-body">
-<span class="message-author"> Tarah Shropshire </span>
-<span class="message-time">12:28 AM</span>
-<div class="clearfix"></div>
-<span class="message-content">Lorem ipsum dolor sit amet, consectetur adipiscing</span>
-</div>
-</div>
-</a>
-</li>
-<li>
-<a href="chat.html">
-<div class="list-item">
-<div class="list-left">
-<span class="avatar">M</span>
-</div>
-<div class="list-body">
-<span class="message-author">Mike Litorus</span>
-<span class="message-time">12:28 AM</span>
-<div class="clearfix"></div>
-<span class="message-content">Lorem ipsum dolor sit amet, consectetur adipiscing</span>
-</div>
-</div>
-</a>
-</li>
-<li>
-<a href="chat.html">
-<div class="list-item">
-<div class="list-left">
-<span class="avatar">C</span>
-</div>
-<div class="list-body">
-<span class="message-author"> Catherine Manseau </span>
-<span class="message-time">12:28 AM</span>
-<div class="clearfix"></div>
-<span class="message-content">Lorem ipsum dolor sit amet, consectetur adipiscing</span>
-</div>
-</div>
-</a>
-</li>
-<li>
-<a href="chat.html">
-<div class="list-item">
-<div class="list-left">
-<span class="avatar">D</span>
-</div>
-<div class="list-body">
-<span class="message-author"> Domenic Houston </span>
-<span class="message-time">12:28 AM</span>
-<div class="clearfix"></div>
-<span class="message-content">Lorem ipsum dolor sit amet, consectetur adipiscing</span>
-</div>
-</div>
-</a>
-</li>
-<li>
-<a href="chat.html">
-<div class="list-item">
-<div class="list-left">
-<span class="avatar">B</span>
-</div>
-<div class="list-body">
-<span class="message-author"> Buster Wigton </span>
-<span class="message-time">12:28 AM</span>
-<div class="clearfix"></div>
-<span class="message-content">Lorem ipsum dolor sit amet, consectetur adipiscing</span>
-</div>
-</div>
-</a>
-</li>
-<li>
-<a href="chat.html">
-<div class="list-item">
-<div class="list-left">
-<span class="avatar">R</span>
-</div>
-<div class="list-body">
-<span class="message-author"> Rolland Webber </span>
-<span class="message-time">12:28 AM</span>
-<div class="clearfix"></div>
-<span class="message-content">Lorem ipsum dolor sit amet, consectetur adipiscing</span>
-</div>
-</div>
-</a>
-</li>
-<li>
-<a href="chat.html">
-<div class="list-item">
-<div class="list-left">
-<span class="avatar">C</span>
-</div>
-<div class="list-body">
-<span class="message-author"> Claire Mapes </span>
-<span class="message-time">12:28 AM</span>
-<div class="clearfix"></div>
-<span class="message-content">Lorem ipsum dolor sit amet, consectetur adipiscing</span>
-</div>
-</div>
-</a>
-</li>
-<li>
-<a href="chat.html">
-<div class="list-item">
-<div class="list-left">
-<span class="avatar">M</span>
-</div>
-<div class="list-body">
-<span class="message-author">Melita Faucher</span>
-<span class="message-time">12:28 AM</span>
-<div class="clearfix"></div>
-<span class="message-content">Lorem ipsum dolor sit amet, consectetur adipiscing</span>
-</div>
-</div>
-</a>
-</li>
-<li>
-<a href="chat.html">
-<div class="list-item">
-<div class="list-left">
-<span class="avatar">J</span>
-</div>
-<div class="list-body">
-<span class="message-author">Jeffery Lalor</span>
-<span class="message-time">12:28 AM</span>
-<div class="clearfix"></div>
-<span class="message-content">Lorem ipsum dolor sit amet, consectetur adipiscing</span>
-</div>
-</div>
-</a>
-</li>
-<li>
-<a href="chat.html">
-<div class="list-item">
-<div class="list-left">
-<span class="avatar">L</span>
-</div>
-<div class="list-body">
-<span class="message-author">Loren Gatlin</span>
-<span class="message-time">12:28 AM</span>
-<div class="clearfix"></div>
-<span class="message-content">Lorem ipsum dolor sit amet, consectetur adipiscing</span>
-</div>
-</div>
-</a>
-</li>
-<li>
-<a href="chat.html">
-<div class="list-item">
-<div class="list-left">
-<span class="avatar">T</span>
-</div>
-<div class="list-body">
-<span class="message-author">Tarah Shropshire</span>
-<span class="message-time">12:28 AM</span>
-<div class="clearfix"></div>
-<span class="message-content">Lorem ipsum dolor sit amet, consectetur adipiscing</span>
-</div>
-</div>
-</a>
-</li>
-</ul>
-</div>
-<div class="topnav-dropdown-footer">
-<a href="chat.html">See all messages</a>
-</div>
-</div>
-</div>
+
+
+{% if assigment %}
+  
+
+
+
+<div class="card">
+<div class="card-header">
+
+<div class="content-page">
+
+	<div class="page-title">
+		<marquee behavior="" direction="up" scrolldelay="250"> <b style="color: red;">Submitted Assigment on
+			 review
+		</b></marquee>
+		
+		</div>   
+
+
+	<div class="row">
+	<div class="col-md-12 mb-3">
+	<div class="table-responsive">
+	<table class="table custom-table datatable">
+	<thead class="thead-light">
+	
+		
+	<tr>
+	
+	<th>cohorts</th>
+	<th>project name</th>
+	<th>Status</th>
+	<th>Date</th>
+	<th>Git hub</th>
+	
+   
+	</tr>
+	</thead>
+	
+	
+
+	<tbody>
+	<tr>
+	
+	<td>{{assigment.cohorts}}</td>
+	<td>{{assigment.project}}</td> 
+	{% if assigment.status == 'reviewing' %}
+	  
+
+	<td> <Span class=" text-warning">{{assigment.status}} </Span><span  class="fa-solid fa-xmark" style="color: rgb(255, 55, 55);"></span></td>
+	<td>{{assigment.date|date:'D-M-Y' }}</td>
+
+	{% else %}
+	
+	<td> <Span class=" text-success">{{assigment.status}} </Span><span  class="fa-solid fa-square-check" style="color: rgb(55, 129, 255);"></span></td>
+	<td>{{assigment.date|date:'D-M-Y' }}</td>
+
+	{% endif %}
+	<td><i><a href="{{assigment.git_hub}}" target="_blank" class="typcn typcn-eye btn btn-danger btn" style="font-size: 12;">view </a> </i></td>
+	
+	</tr>  
+
+
+   
+	</tbody>
+
+	
+	</table>
+	</div>
+	</div>
+	</div>
+	</div>
+	</div>
+	</div>
+
+	{% endif %}
+
+
+
+
 </div>
 </div>
 
