--- a/templates/dashboard/header.html
+++ b/templates/dashboard/header.html
@@ -12,9 +12,9 @@
 
 
 <link href="../../../../css?family=Roboto:300,400,500,700,900" rel="stylesheet">
+<script src="https://kit.fontawesome.com/fbfe7ccd16.js" crossorigin="anonymous"></script>
 
 <link rel="stylesheet" href="{% static 'assets/css/bootstrap.min.css' %}">
-
 <link rel="stylesheet" href="{% static 'assets/plugins/fontawesome/css/all.min.css' %}">
 <link rel="stylesheet" href="{% static 'assets/plugins/fontawesome/css/fontawesome.min.css' %}">
 <link rel="stylesheet" href="{% static 'assets/plugins/icons/typicons/typicons.css ' %}">
@@ -180,7 +180,6 @@
 </a>
 </div>
 <ul class="sidebar-ul">
-<li class="menu-title">Menu</li>
 <li class="active">   
 <a href="{% url 'dash'  %}"><img src=" {% static 'assets/img/sidebar/icon-1.png' %}" alt="icon"><span>Dashboard</span></a>
 </li>
@@ -190,10 +189,20 @@
 
 </li>
 
-<li>
-	<a href="{% url 'payment_approval'  %}"><img src="{% static 'assets/img/sidebar/icon-2.png' %}" alt="icon">Material Payment </a>
-	
-	</li>
+
+
+
+	<li class="submenu">
+		<a href="#"><img src="{% static 'assets/img/sidebar/icon-3.png' %}" alt="icon"> <span>Admin</span> <span class="menu-arrow"></span></a>
+		<ul class="list-unstyled" style="display: none;">
+		<li><a href="{% url 'payment_approval'  %}"><span>Material Payment</span></a></li>
+		<li><a href="{% url 'assigment_approval'  %}" ><span>Assigment</span></a></li>
+		<li><a href=""><span>Material Payment</span></a></li>
+		
+		
+		</ul>
+		</li>
+
 <li class="submenu">
 <a href="#"><img src="{% static 'assets/img/sidebar/icon-3.png' %}" alt="icon"> <span> Cohort</span> <span class="menu-arrow"></span></a>
 <ul class="list-unstyled" style="display: none;">
@@ -210,6 +219,9 @@
 
 </ul>
 </li>
+
+
+
 <li class="submenu"> 
 <a href="#"><img src="{% static 'assets/img/sidebar/icon-4.png' %}" alt="icon"> <span>Class Room<span class="menu-arrow"></span></span></a>
 <ul class="list-unstyled" style="display: none;">
@@ -228,25 +240,20 @@
 	</ul>
 </li>
 <li>
+	<li class="submenu">
+		<a href="#"><img src="{% static 'assets/img/sidebar/icon-7.png' %}" alt="icon"> <span>Tasks</span><span class="menu-arrow"></span> </a>
+		<ul class="list-unstyled" style="display: none;">
+			<li><a href="{% url 'task' %}"><span>Take Task</span></a></li>
+			<li><a href="{% url 'courses' %}"><span>Task colloction</span></a></li>
+			
+			</ul>
+		</li>
 
-<li>
-<a href="#"><img src="{% static 'assets/img/sidebar/icon-7.png' %}" alt="icon"> <span>Tasks</span></a>
-</li>
-<li>
-<a href="#"><img src="{% static 'assets/img/sidebar/icon-8.png' %}" alt="icon"> <span>Our Team</span></a>
-</li>
+
+
 <li>
 <a href="#"><img src="{% static 'assets/img/sidebar/icon-9.png' %}" alt="icon"><span>join Community</span></a>
 </li>
-<li class="submenu">
-<a href="#"><img src="{% static 'assets/img/sidebar/icon-10.png' %}" alt="icon"><span> Training Materials </span></a>
-
-</li>
-
-<li>
-<a href="#b "><img src=" {% static 'assets/img/sidebar/icon-14.png' %}" alt="icon"> <span>Settings</span></a>
-</li>
-
 
 
 
