--- a/templates/dashboard/project.html
+++ b/templates/dashboard/project.html
@@ -15,12 +15,26 @@
         <div class="content container-fluid">
         <div class="page-header">
         <div class="row">
+
+        {% if active_projects %}
+          
+      
+        {% if projects  %}
+        <div class="col-lg-6 col-md-6 col-sm-6 col-12">
+ 
+     
+     
+       <p> <a href=" {% url 'submitassigment' %}" class=" btn btn-warning text-white">Submit Your Porject here </a> </p>
+      
+        </div>
+        {% else %}
         <div class="col-lg-6 col-md-6 col-sm-6 col-12">
         <h5 class="text-uppercase mb-0 mt-0 page-title">Assignment Portal</h5>
         </div>
-      
+        {% endif %}
         </div>
         </div>
+
     <div class="row">
       <div class="col-sm-6">
 {% for projects   in projects  %}
@@ -83,7 +97,26 @@
 
 
     </div>
-        
+
+{% else %}
+
+
+    <div class="row">
+   
+    <div class="col-lg-6 col-md-6 col-sm-6 col-12">
+    <h5 class="text-uppercase mb-0 mt-0 page-title">NO Current Project</h5>
+    </div>
+   
+    </div>
+
+
+
+
+    {% endif %}
+
+
+
+
         </div>
 
 
