--- a/templates/register.html
+++ b/templates/register.html
@@ -46,7 +46,7 @@
 
                         <div class="card-text">
                             <label for="" class="form-label">Whatsapp Number:</label>
-                            <input type="number" name="phone" id="phone" class="form-control" placeholder="Enter Whatsapp No " required/>
+                            <input type="tel" minlength="10" maxlength="11"  name="phone" id="phone" class="form-control" placeholder="Enter Whatsapp No " required/>
                             <div class="whatsapp"><i class="fa-brands fa-whatsapp"></i></div>
 
                         </div>
