--- a/templates/index2.html
+++ b/templates/index2.html
@@ -17,15 +17,15 @@
 
     <div class="container-fluid">
       
-        <div class="container container-form">
-        <div class="card  ">
         
-            <h3 class="mx-5 mt-5 text-warning ">Complete your application your are few step ahead </h3>
+        
+        
+            <h3 class="mx-5 mt-5 h1 ">Complete your application your are few step ahead </h3>
            
                 
 
   
-  <div class="card-body">
+
     {% include  'message.html' %}
     <form action="" method="post" enctype="multipart/form-data" >
       {% csrf_token %}
@@ -193,16 +193,16 @@
     </form>
 
 
-  </div>    
+ 
           
            
-        </div>
+      
 
 
             
 
 
-        </div>
+     
     </div>
  
 
