--- a/static/style/form.css
+++ b/static/style/form.css
@@ -8,6 +8,12 @@
 }
 
 
+.h1{
+
+    font-weight: bolder;
+    font-size: 30px;
+    color: rgb(255, 217, 0);
+}
 
 .mycol{
 
@@ -67,6 +73,7 @@ label{
 
     font-size: 18px;
     text-transform: uppercase;
+    font-weight: bold;
 
 }
 
@@ -123,10 +130,18 @@ and (max-width:1024px) {
 @media (max-width: 900px){
 
     .container-fluid{
-        height: 350vh ;
+        height: 220vh ;
+
 
       
     }
+
+
+    
+
+
+
+
 }
 
 
