--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -12,93 +12,56 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <link rel="stylesheet" href="{% static 'style/myform.css' %}">
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-    <title>Registration </title>
-<style>
+    <title> Login Portal </title>
 
 
+    <style>
 
-  .fa-forward {
-    position: absolute;
-    top: 89%;
-    right: 21%;
-    font-size: 20px;
-    display: flex;
-    align-items: center;
-    color: rgb(255, 255, 255);
-}
-
-
-.whatsapp {
-  position: absolute;
-  top: 37%;
-  left: 3%;
-  font-size: 20px;
-  display: flex;
-  align-items: center;
-  color: green;
-}
-
-
-form {
-  width: 40%;
-  display: inline-block;
-  margin-top: 231px;
-  position: relative;
-  color: white;
-}
-
-
-
-@media screen and (max-width: 900px){
-
-
-form {
-    width: 70%;
-    margin-top: 157px;
-}
-
-}
-</style>
+      .fa-forward {
+        position: absolute;
+        top: 88%;
+        right: 30%;
+        font-size: 20px;
+        display: flex;
+        align-items: center;
+        color: rgb(255, 255, 255);
+      }
+    </style>
 
   </head>
-
-  
   <body>
 
 
    
        
-            <div class="card-body">
+            <div class="card-body" style="background-color: #009688;">
                 
-                 
-                    <div class="container" id="alert">
-                      
-         
-                    </div>
                     
-                    {% include  'message.html' %}
+                  
                    
                     <div class="container message  ">
                     
-                    <div class="form"> 
+                    <div class="form" style="
+                    margin-top: 110px;
+                "> 
                     <form action=" " id="formid" method="post" autocomplete="off">
                       {% csrf_token %}
-                      <h1>Applicant Login</h1>
+                      <h1>Login Portal</h1>
                        
-
 
                         <div class="card-text">
                             <label for="" class="form-label">Whatsapp Number:</label>
-                            <input type="number" name="phone" id="phone" class="form-control" placeholder="Login With Whatsapp Number " required/>
+                            <input type="tel" minlength="10" maxlength="11"  name="phone" id="phone" class="form-control" placeholder="Enter Whatsapp No " required/>
                             <div class="whatsapp"><i class="fa-brands fa-whatsapp"></i></div>
 
                         </div>
 
 
-                        
+                       
+
                         <div class="card-text">
                           <label for="" class="form-label">Enter Password:</label>
-                          <input type="password" name="password" id="password" class="form-control" placeholder="Password " required/>
+                          <input type="password" name="password" id="password" class="form-control" placeholder="password " required/>
                           <div class="whatsapp"><i class="fa-brands fa-whatsapp"></i></div>
 
                       </div>
@@ -125,11 +88,7 @@ form {
                 </div>
 
 
-        </div>
-
       
-        
-    </div>
  
 
    
@@ -138,217 +97,6 @@ form {
  
   </body>
 
-  <script>
-    /*
-
-    $(document).ready(function(){
-      $('#username').change(function(){
-        const username = $('#username').val();
-        $.ajax({
   
-          url: "{% url 'usernamevalid' %}",
-          data: {
-            'username':  username
-          },
-  
-          dataType: 'json',
-  
-          success: function(data){
-  
-            if (data.is_taken){
-              swal("sorry!", "username already Registered!", "error");
-            }
-  
-}
-  
-  
-  
-        });
-    
-    
-      });
-    
-    
-     });
-    
-
-
-
-     $(document).ready(function(){
-      $('#phone').change(function(){
-        const phone = $('#phone').val();
-        $.ajax({
-  
-          url: "{% url 'phonevalid' %}",
-          data: {
-            'phone':  phone
-          },
-  
-          dataType: 'json',
-  
-          success: function(data){
-  
-            if (data.is_taken){
-              swal("sorry!", "phone number already Registered!", "error");
-            }
-  
-}
-  
-  
-  
-        });
-    
-    
-      });
-    
-    
-     });
-    
-
-     $(document).ready(function(){
-      $('#email').change(function(){
-        const email = $('#email').val();
-        $.ajax({
-  
-          url: "{% url 'emailvalid' %}",
-          data: {
-            'email':  email
-          },
-  
-          dataType: 'json',
-  
-          success: function(data){
-  
-            if (data.is_taken){
-              swal("sorry!", "Email Address already Registered!", "error");
-            }
-  
-}
-  
-  
-  
-        });
-    
-    
-      });
-    
-    
-     });
-    
-
-
-
-     
-   
-
-  
-
-
-
- const  form = document.getElementById('formid');
- const  myalert = document.getElementById('alert');
- const email = document.getElementById('email')
- const phone = document.getElementById('phone')
- const username = document.getElementById('username')
- const password = document.getElementById('password')
- const  password2 = document.getElementById('password2')
- const csrf    =  document.getElementsByName('csrfmiddlewaretoken')
-
-
-const url =  ""
-const alerthandle = (type, text) =>{
-  myalert.innerHTML =`<div class="alert alert-${type}" role="alert">
-   ${text}
-  </div>`
-
-
-}
-
-
-
-
-form.addEventListener('submit',(e) => {
-  e.preventDefault();
-
-  
-
-  const fb = new  FormData()
-  fb.append('csrfmiddlewaretoken', csrf[0].value)
-  fb.append('phone', phone.value)
-  fb.append("email", email.value)
-  fb.append('username', username.value)
-  fb.append('password', password.value)
-  fb.append('password2', password2.value)
-
-
-  $.ajax({
-
-    type: "POST",
-    url:  url, 
-    data:  fb,
-    processData: false,
-    contentType: false,
-    cache: false,
-    success: function(data){
-      swal("Account created Sucessfully", "Redirecting to profile!", "success");
-      if(data){
-        setTimeout(function(){
-          window.location = "{% url 'profile' %}" 
-
-        },5000)
-      
-        
-       
-
-      }
-
-
-      
-    },
-
-    error:function(error){
- 
-      alerthandle('danger', "something want wrong")
-      
-
-      
-    }, 
-    
-});
- });
-
-
- 
-
-
-  
-  /*
-$(document).on('submit','#formid', function(e){
-  e.preventDefault();
-  $.ajax({
-    type: 'POST',
-    url:   "{% url 'register' %}", 
-
-    data:{
-      username: $('#username').val(),
-      email: $('#email').val(),
-      phone: $('#phone').val(),
-      password: $('#password').val(),
-      password2: $('#password2').val(),
-      csrfmiddlewaretoken:$('input[name=csrfmiddlewaretoken]').val(),
-
-    },
-  
-    
-    
-
-
-  })
-})
-  */
-
-
-
-  </script>
 
 </html>
