--- a/templates/registration/login2.html
+++ b/templates/registration/login2.html
@@ -12,10 +12,41 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <link rel="stylesheet" href="{% static 'style/myform.css' %}">
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-    <title>Registration </title>
+    <title>Login Portal </title>
+<style>
 
+
+
+  .fa-forward {
+    position: absolute;
+    top: 89%;
+    right: 21%;
+    font-size: 20px;
+    display: flex;
+    align-items: center;
+    color: rgb(255, 255, 255);
+}
+
+
+.whatsapp {
+  position: absolute;
+  top: 37%;
+  left: 3%;
+  font-size: 20px;
+  display: flex;
+  align-items: center;
+  color: green;
+}
+
+
+
+
+
+</style>
 
   </head>
+
+  
   <body>
 
 
@@ -23,52 +54,38 @@
        
             <div class="card-body" style="background-color: #009688;">
                 
+                 
+                 
                     
-                  
+                    {% include  'message.html' %}
                    
                     <div class="container message  ">
                     
                     <div class="form"> 
                     <form action=" " id="formid" method="post" autocomplete="off">
                       {% csrf_token %}
-                      <h1>Create Account</h1>
-                        <div class="card-text">
-                            <label for="" class="form-label">Email Address:</label>
-                            <input type="email"  name="email" class="form-control" id="email" placeholder="Enter Emaill here " required/>
-                            <div class="icon"><i class="fa-regular fa-envelope"></i></div>
-
-                        </div>
+                      <h1>Applicant Login</h1>
+                       
 
 
                         <div class="card-text">
                             <label for="" class="form-label">Whatsapp Number:</label>
-                            <input type="tel" minlength="10" maxlength="11"  name="phone" id="phone" class="form-control" placeholder="Enter Whatsapp No " required/>
+                            <input type="number" name="phone" id="phone" class="form-control" placeholder="Login With Whatsapp Number " required/>
                             <div class="whatsapp"><i class="fa-brands fa-whatsapp"></i></div>
 
                         </div>
 
 
-                        <div class="card-text">
-                          <label for="" class="form-label">Username:</label>
-                          <input type="text" name="username" id="username" class="form-control" placeholder="Enter Username " required/>
-                          <div class="user"><i class="fa-solid fa-user-lock"></i></div>
-
-                      </div>
-
+                        
                         <div class="card-text">
                           <label for="" class="form-label">Enter Password:</label>
-                          <input type="password" name="password" id="password" class="form-control" placeholder="password " required/>
+                          <input type="password" name="password" id="password" class="form-control" placeholder="Password " required/>
                           <div class="whatsapp"><i class="fa-brands fa-whatsapp"></i></div>
 
                       </div>
 
 
-                      <div class="card-text">
-                        <label for="" class="form-label">Comfirm Password:</label>
-                        <input type="password" name="password2" id="password2" class="form-control" placeholder="password " required/>
-                        <div class="whatsapp"><i class="fa-brands fa-whatsapp"></i></div>
-
-                    </div>
+                     
 
 
                       
@@ -89,7 +106,11 @@
                 </div>
 
 
+        </div>
+
       
+        
+    </div>
  
 
    
@@ -99,6 +120,7 @@
   </body>
 
   <script>
+    /*
 
     $(document).ready(function(){
       $('#username').change(function(){
@@ -252,7 +274,7 @@ form.addEventListener('submit',(e) => {
       swal("Account created Sucessfully", "Redirecting to profile!", "success");
       if(data){
         setTimeout(function(){
-          window.location = "{% url 'dash' %}" 
+          window.location = "{% url 'profile' %}" 
 
         },5000)
       
