--- a/templates/index2.html
+++ b/templates/index2.html
@@ -32,7 +32,7 @@
       <div class="row mt-5">
         <div class="col-md-6">
           <label for="#" class="form-lable">sponsors code(Optional)</label>
-          <input type="text" class="form-control"  name="sponsors" placeholder="Enter sponsors code:" required/>
+          <input type="text" class="form-control"  name="sponsors" placeholder="Enter sponsors code:" />
 
         </div>
         <div class="col-md-6">
