--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -33,7 +33,7 @@
 
 
    
-       
+        <div class="container-fluid">
             <div class="card-body" style="background-color: #009688;">
                 
                     
@@ -87,7 +87,7 @@
                     style="position: absolute; top: 0px; left: 0px"></i>
                 </div>
               </div>
-            </div>
+            
 
             <div class="btn d-grid mt-3">
               <input type="submit" id="login-button" value="Proceed" class="btn btn-primary  ">
@@ -95,6 +95,8 @@
                       <i class="fa-solid fa-forward"></i>
                   </div>
             </div>
+            </div>
+        </div>
                       
                        
 
