--- a/templates/registration/login2.html
+++ b/templates/registration/login2.html
@@ -50,7 +50,7 @@
   <body>
 
 
-   
+    <div class="container-fluid">
        
             <div class="card-body" style="background-color: #009688;">
                 
@@ -108,7 +108,7 @@
 
         </div>
 
-      
+    </div>
         
     </div>
  
