feat: add custom template filters for arithmetic operations and integrate iziToast for notifications

--- a/templates/dashboard/header.html
+++ b/templates/dashboard/header.html
@@ -10,6 +10,10 @@
 
 <link rel="shortcut icon" type="image/x-icon" href="{% static 'assets/img/favicon.png' %}">
 
+<!-- izitoast CSS & Script -->
+<link rel="stylesheet" href="iziToast.min.css">
+<script src="iziToast.min.js" type="text/javascript"></script>
+
 
 <link href="../../../../css?family=Roboto:300,400,500,700,900" rel="stylesheet">
 <script src="https://kit.fontawesome.com/fbfe7ccd16.js" crossorigin="anonymous"></script>
