--- a/templates/dashboard/head.html
+++ b/templates/dashboard/head.html
@@ -21,6 +21,10 @@
 
 <link rel="stylesheet" href="assets/plugins/morris/morris.css">
 
+<!-- izitoast CSS & Script -->
+<link rel="stylesheet" href="iziToast.min.css">
+<script src="iziToast.min.js" type="text/javascript"></script>
+
 <link rel="stylesheet" href="assets/css/style.css">
 <!--[if lt IE 9]>
 		<script src="assets/js/html5shiv.min.js"></script>
