--- a/templates/index2.html
+++ b/templates/index2.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/fbfe7ccd16.js" crossorigin="anonymous"></script>
+    <!-- izitoast CSS & Script -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/izitoast/dist/css/iziToast.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/izitoast/dist/js/iziToast.min.js" type="text/javascript"></script>
+
     <link rel="stylesheet" href="{% static 'style/form.css' %}">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
@@ -74,7 +78,10 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8">
-                <div class="form-container">
+                <div class="form-container" style="position: relative;">
+                    <div style="position: absolute; top: 50px; left: 50px;">
+                        <img id="imagePreview" src="#" alt="Uploaded Image" class="img-fluid rounded-circle" style="width: 120px; height: 120px; margin-bottom: 2rem; display: none; border: 2px solid #00796b;">
+                    </div>
                     <h3 class="text-center mb-4" style="color: #00796b;">Complete Your Application</h3>
                     <div class="step-indicator">
                         <div class="step active">1</div>
@@ -232,7 +239,7 @@
 
                         <!-- Step 3: Social Media and Picture Upload -->
                         <div class="form-step" id="step3">
-                            <div class="row">
+                            <div class="row pt-5">
                                 <!-- Certificate -->
                                 <div class="col-md-6 mb-3">
                                     <label for="certificate" class="form-label">Certificate</label>
@@ -295,7 +302,7 @@
                                     <label for="profile-picture" class="form-label text-danger">Upload Your Picture</label>
                                     <div class="input-group">
                                         <span class="input-group-text"><i class="fas fa-camera"></i></span>
-                                        <input type="file" class="form-control" id="file" name="file" required>
+                                        <input type="file" class="form-control" id="file" name="file" required onchange="readURL(this)">
                                     </div>
                                 </div>
                             </div>
@@ -328,6 +335,18 @@
             });
         }
 
+        // function to display file uploaded in image box 
+        function readURL(input) {
+            if (input.files && input.files[0]) {
+                var reader = new FileReader();
+                reader.onload = function (e) {
+                    $('#imagePreview').attr('src', e.target.result).show();
+                };
+                reader.readAsDataURL(input.files[0]);
+            }
+        }
+
+
          // AJAX Form Submission
         $(document).ready(function() {
             $('#applicationForm').on('submit', function(e) {
@@ -343,13 +362,24 @@
                     processData: false, // Don't process the files
                     contentType: false, // Set content type to false as jQuery will tell the server its a query string request
                 success: function () {
-                    swal("Success", "Profile updated successfully!", "success").then(
-                        () => (window.location.href = "/dashboard")
-                        );
-                    },
+                    iziToast.success({
+                        title: 'OK',
+                        message: 'Profile updated successfully!',
+                        position: 'topRight'
+                    });
+
+                    // Delay the redirection to ensure the toast is shown
+                    setTimeout(function () {
+                        window.location.href = "/dashboard";
+                    }, 2000);
+                },
+             
                 error: function () {
-                    swal("Error", "Something went wrong", "error");
-                    },
+                    iziToast.error({
+                    title: 'Error',
+                    message: 'Something went wrong',
+                });
+                }
                 });
             });
         });
